--- a/.gitignore
+++ b/.gitignore
@@ -131,4 +131,11 @@ iOSInjectionProject/
 /*.gcno
 **/xcshareddata/WorkspaceSettings.xcsettings
 
+## User settings
+xcuserdata/
+
+## Xcode 8 and earlier
+*.xcscmblueprint
+*.xccheckout
+
 # End of https://www.toptal.com/developers/gitignore/api/swift,macos,xcode
